<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one_content">Box One</string>
    <string name="box_two_content">Box Two</string>
    <string name="box_three_content">Box Three</string>
    <string name="box_four_content">Box Four</string>
    <string name="box_five_content">Box Five</string>
    <string name="green_bttn_txt">GREEN</string>
    <string name="yellow_bttn_txt">YELLOW</string>
    <string name="red_bttn_txt">RED</string>
    <string name="send_image_error">Não foi possível enviar o screenshot!</string>
    <string name="share_message">Opções de compartilhamento:</string>
</resources>